--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,20 +1,25 @@
 # This file is not a full hyprland configuration.
 # It is intended to be included in your main hyprland.conf.
 #
-#  ================================================================
-#   ____  _     _      _       _           _
-#  / __ \| |   | |    | |     | |         | |
-# | |  | | | __| |    | | ___ | |__   ___ | |__   ___
-# | |  | | |/ _` |    | |/ _ \| '_ \ / _ \| '_ \ / _ \
-# | |__| | | (_| |    | | (_) | |_) | (_) | |_) | (_) |
-#  \____/|_|\__,_|    |_|\___/|_.__/ \___/|_.__/ \___/
 #
-#                      O L D J O B O B O
 #
-#  ================================================================
+#
+# ██████╗ ██╗███████╗ ██████╗██╗   ██╗██╗████████╗
+# ██╔══██╗██║██╔════╝██╔════╝██║   ██║██║╚══██╔══╝
+# ██████╔╝██║███████╗██║     ██║   ██║██║   ██║
+# ██╔══██╗██║╚════██║██║     ██║   ██║██║   ██║
+# ██████╔╝██║███████║╚██████╗╚██████╔╝██║   ██║
+# ╚═════╝ ╚═╝╚══════╝ ╚═════╝ ╚═════╝ ╚═╝   ╚═╝
+#                          .-.
+#         .'            .;|/:
+#    .-..'  .-.        .;   : .-.     .;.::.
+#   :   ; .;.-'       .;    :;   :    .;
+#   `:::'`.`:::'  .:'.;     :`:::'-'.;'
+#                (__.'      `.             ɖǟʀӄ
+#                                                 
 
-$activeBorderColor = rgb(dcc9bc)
-$inactiveBorderColor = rgba(756d94cc)
+$activeBorderColor = rgb(AE3F82) rgb(AE3F82) rgb(AE3F82) rgb(AE3F82) rgb(E39C45) rgb(AE3F82) rgb(AE3F82) rgb(AE3F82) 35deg
+$inactiveBorderColor = rgba(725a5acc)
 
 general {
     col.active_border = $activeBorderColor
