--- a/mako.ini
+++ b/mako.ini
@@ -1,6 +1,6 @@
-text-color=#ffe9c7
-border-color=#7b3d79
-background-color=#181515
+text-color=#DCC9BC
+border-color=#AE3F82
+background-color=#1A1515
 width=420
 height=110
 padding=10
