--- a/warp.yaml
+++ b/warp.yaml
@@ -1,26 +1,26 @@
 name: Aether
-accent: "#614f76"
-cursor: "#614f76"
-background: "#181515"
-foreground: "#ffe9c7"
+accent: "#AE3F82"
+cursor: "#ffe9c7"
+background: "#1A1515"
+foreground: "#DCC9BC"
 details: darker
 
 terminal_colors:
   normal:
-    black:   "#181515"
+    black:   "#1A1515"
     red:     "#f07342"
-    green:   "#768f80"
-    yellow:  "#959a6b"
-    blue:    "#614f76"
+    green:   "#959a6b"
+    yellow:  "#e39c45"
+    blue:    "#756d94"
     magenta: "#7b3d79"
-    cyan:    "#756d94"
+    cyan:    "#ae3f82"
     white:   "#dcc9bc"
   bright:
-    black:   "#725a5a"
-    red:     "#f07342"
-    green:   "#768f80"
-    yellow:  "#959a6b"
-    blue:    "#614f76"
+    black:   "#2d2424"
+    red:     "#cf223e"
+    green:   "#959a6b"
+    yellow:  "#e39c45"
+    blue:    "#756d94"
     magenta: "#7b3d79"
-    cyan:    "#756d94"
+    cyan:    "#ae3f82"
     white:   "#ffe9c7"
